# metadef

./: CMakeLists.txt  OWNERS  README.en.md  README.md  build.sh
error_manager/: CMakeLists.txt  error_code.json  error_manager.cc  module.mk
graph/: CMakeLists.txt  aligned_ptr.cc  anchor.cc  any_value.cc  ascend_string.cc  attr_store.cc  attr_value.cc  axis_type_info.cc  buffer.cc  buffer_impl.h  compute_graph.cc  compute_graph_impl.h  format_refiner.cc  format_refiner.h  ge_attr_define.cc  ge_attr_value.cc  ge_tensor.cc  ge_tensor_impl.h  gnode.cc  graph.cc  graph.mk  inference_context.cc  model.cc  model_serialize.cc  node.cc  node_impl.h  op_desc.cc  op_desc_impl.h  op_io.h  operator.cc  operator_factory.cc  operator_factory_impl.cc  operator_impl.cc  operator_impl.h  profiler.cc  ref_relation.cc  resource_context_mgr.cc  runtime_inference_context.cc  shape_refiner.cc  small_vector.cc  (+3 more)
graph/common/: large_bm.cc
graph/compile_cache_policy/: compile_cache_desc.cc
graph/debug/: ge_log.h  ge_op_types.h  ge_util.h  graph_debug.cc  graph_debug.h
graph/detail/: attributes_holder.cc
graph/opsproto/: opsproto_manager.cc
graph/option/: ge_context.cc  ge_local_context.cc
graph/serialization/: attr_serializer.cc  attr_serializer.h  attr_serializer_registry.cc  attr_serializer_registry.h  bool_serializer.cc  bool_serializer.h  buffer_serializer.cc  buffer_serializer.h  data_type_serializer.cc  data_type_serializer.h  float_serializer.cc  float_serializer.h  graph_serializer.cc  graph_serializer.h  int_serializer.cc  int_serializer.h  list_list_float_serializer.cc  list_list_float_serializer.h  list_list_int_serializer.cc  list_list_int_serializer.h  list_value_serializer.cc  list_value_serializer.h  named_attrs_serializer.cc  named_attrs_serializer.h  string_serializer.cc  string_serializer.h  tensor_desc_serializer.cc  tensor_desc_serializer.h  tensor_serializer.cc  tensor_serializer.h
graph/serialization/utils/: serialization_util.cc  serialization_util.h
graph/stub/: gen_stubapi.py
graph/utils/: anchor_utils.cc  constant_utils.cc  cycle_detector.cc  ffts_graph_utils.cc  file_utils.cc  file_utils.h  ge_ir_utils.cc  ge_ir_utils.h  graph_utils.cc  mem_utils.h  node_utils.cc  op_desc_utils.cc  scope_guard.h  string_utils.h  tensor_utils.cc  transformer_utils.cc  transformer_utils.h  tuning_utils.cc  type_utils.cc
graph/utils/dumper/: ge_graph_dumper.h  (+1 more)
inc/common/: blocking_queue.h  dynamic_aipp.h  large_bm.h  npu_error_define.h  sgt_slice_type.h
inc/graph/: aligned_ptr.h  anchor.h  any_value.h  ascend_limits.h  attr_store.h  attr_value_serializable.h  axis_type_info.h  buffer.h  common_error_codes.h  compiler_options.h  compute_graph.h  def_types.h  ge_attr_value.h  ge_context.h  ge_global_options.h  ge_local_context.h  ge_tensor.h  graph_util.h  hash_utils.h  model.h  model_serialize.h  node.h  object_pool.h  op_desc.h  op_kernel_bin.h  operator_factory_impl.h  opsproto_manager.h  profiler.h  range_vistor.h  ref_relation.h  repeated_iterator.h  resource_context_mgr.h  runtime_inference_context.h  shape_refiner.h  small_vector.h  type_utils.h  usr_types.h
inc/register/: custom_pass_helper.h  ffts_plus_task_update.h  ffts_plus_update_manager.h  host_cpu_context.h  infer_axis_slice_registry.h  infer_data_slice_registry.h  op_kernel_registry.h  op_registry.h  op_tiling.h  ops_kernel_builder_registry.h  prototype_pass_registry.h  register.h  register_format_transfer.h  register_utils.h  tensor_assign.h
ops/: op_imp.cpp
proto/: fusion_model.proto  fwk_adapter.proto  ge_ir.proto  om.proto  task.proto
register/: CMakeLists.txt  auto_mapping_util.cpp  auto_mapping_util.h  ffts_plus_update_manager.cc  host_cpu_context.cc  infer_axis_slice_registry.cc  infer_data_slice_registry.cc  module.mk  op_kernel_registry.cpp  op_tiling.cpp  op_tiling_registry.cpp  op_tiling_registry_impl.cpp  op_tiling_registry_impl.h  ops_kernel_builder_registry.cc  prototype_pass_registry.cc  register.cpp  register_format_transfer.cc  register_pass.cpp  tensor_assign.cpp
register/op_tiling/: op_tiling.cc  op_tiling_attr_utils.cc  op_tiling_constants.h  op_tiling_info.cc  op_tiling_py.cc  op_tiling_registry.cc  op_tiling_utils.cc  op_tiling_utils.h
register/scope/: scope_graph.cc  scope_pass.cc  scope_pass_registry.cc  scope_pattern.cc  scope_util.cc
tests/ut/graph/: CMakeLists.txt
tests/ut/graph/testcase/: aligned_ptr_unittest.cc  anchor_unittest.cc  anchor_utils_unittest.cc  any_value_ut.cc  ascend_string_unittest.cc  attr_serializer_registry_unittest.cc  attr_serializer_unittest.cc  attr_store_ut.cc  attr_utils_unittest.cc  attributes_holder_unittest.cc  buffer_unittest.cc  compile_cache_policy_hasher_unittest.cc  compile_cache_policy_unittest.cc  compute_graph_unittest.cc  constant_utils_unittest.cc  cycle_detector_unittest.cc  ffts_graph_utils_unittest.cc  file_utils_unittest.cc  func_counter.cc  func_counter.h  ge_attr_value_unittest.cc  ge_context_unittest.cc  ge_graph_dumper_unittest.cc  ge_ir_utils_unittest.cc  ge_local_context_unittest.cc  ge_tensor_unittest.cc  gnode_unittest.cc  graph_builder_utils.h  graph_debug_unittest.cc  graph_unittest.cc  graph_utils_unittest.cc  inference_context_unittest.cc  model_unittest.cc  node_unittest.cc  node_utils_unittest.cc  object_pool_unittest.cc  op_desc_unittest.cc  op_desc_utils_unittest.cc  op_imp_unittest.cc  operator_constuct_graph_unittest.cc  (+18 more)
tests/ut/register/: CMakeLists.txt  graph_builder_utils.cc
tests/ut/register/testcase/: auto_mapping_util_unittest.cc  fusion_statistics.cc  graph_fusion_clycle_detection_unittest.cc  infer_axis_slice_registry_unittest.cc  infer_data_slice_registry_unittest.cc  op_kernel_registry_unittest.cc  ops_kernel_builder_registry_unittest.cc  register_buffer_fusion.cc  register_graph_fusion.cc  register_graph_fusion_2.cc  register_graph_fusion_3.cc  register_optiling_unittest.cc  register_pass_unittest.cc  register_prototype_unittest.cc  register_scope_graph_unittest.cc  register_scope_pass_unittest.cc  register_unittest.cc  scope_pattern_unittest.cc  scope_util_unittest.cc  tensor_assign_unittest.cc
(+77 files in other folders)
